--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,6 @@
 
     <uses-sdk android:minSdkVersion="16"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -30,7 +29,7 @@
                    android:value="@integer/google_play_services_version" />
 
 
-        <activity android:name="pl.cydo.MyActivity"
+        <activity android:name="pl.cydo.activity.MainTabActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
