--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
             <scope>provided</scope>
         </dependency>
 
+
+
         <dependency>
             <groupId>com.google.android.gms</groupId>
             <artifactId>google-play-services</artifactId>
@@ -35,6 +37,18 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+		<dependency>
+			<groupId>com.squareup.retrofit</groupId>
+			<artifactId>retrofit</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
